spacing fix on credentials

--- a/css/credentials.css
+++ b/css/credentials.css
@@ -42,10 +42,18 @@ body {
   background: #ffffff;
   /*background-color: var(--trans);*/
   background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url('../img/credentials.jpeg');
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+/*  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;*/
+
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  background-size: auto;
+  background-size: cover;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 1.255rem;
   line-height: 1.6;
@@ -560,6 +568,7 @@ body {
 
 .modal-box {
   display: flex !important;
+  justify-content: space-around;
 }
 
 .logo {
